<resources>
    <string name="app_name">Ceria Admin</string>
    <string name="no_connection">Periksa Koneksi Kamu</string>
    <string name="desc_nc">Pastikan kamu terhubung ke internet dan coba lagi</string>
    <string name="try_again">Coba Lagi</string>
    <string name="welcome">Selamat Datang</string>
    <string name="desc_welcome">Masukkan nama pengguna dan kata sandi kamu ya...</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="toast_exit">Tekan sekali lagi untuk keluar</string>
    <string name="text_disconnect">Tidak Ada Internet</string>
    <string name="desc_disconnect">Pastikan koneksi internetmu aktif dan coba lagi</string>
    <string name="profile">Profile</string>
    <string name="ganti_pw">Ganti Kata Sandi</string>
    <string name="atur_user">Manajemen Pengguna</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="exit">Keluar</string>
    <string name="versi">Versi 1.0</string>
    <string name="decs_about">Ceria merupakan aplikasi untuk menambah minat literasi cerita rakyat pada siswa, dan juga sebagai media pembelajaran tambahan dalam mendukung proses belajar mengajar.</string>
    <string name="desc_ganti_pw">Silahkan masukkan kata sandi anda</string>
    <string name="new_pw">Kata Sandi Baru</string>
    <string name="confirm_pw">Konfirmasi Kata Sandi</string>
    <string name="name">Nama</string>
    <string name="nip">NIP</string>
    <string name="nis">NIS</string>
    <string name="save">Simpan</string>
    <string name="add">Tambah</string>
    <string name="edit">Edit</string>
    <string name="pagi">Halo, Selamat Pagi</string>
    <string name="siang">Halo, Selamat Siang</string>
    <string name="sore">Halo, Selamat Sore</string>
    <string name="malam">Halo, Selamat Malam</string>
    <string name="user_search">Cari Pengguna...</string>
    <string name="book_search">Cari judul cerita...</string>
    <string name="beranda">Beranda</string>
    <string name="ekstra">Ekstra</string>
    <string name="kuis">Kuis</string>
    <string name="puzzle">Puzzle</string>
    <string name="add_cover_cerita">Pilih Gambar Cerita</string>
    <string name="add_judul_cerita">Judul Cerita</string>
    <string name="add_asal_cerita">Asal Cerita</string>
    <string name="add_desk_cerita">Deskripsi Cerita</string>
    <string name="add_file_cerita">File Cerita</string>
    <string name="add_sound_cerita">Suara Cerita</string>
    <string name="username_error">Nama Pengguna harus diisi</string>
    <string name="pw_error">Kata Sandi harus diisi</string>
    <string name="cancel">Batal</string>
    <string name="iya_keluar">Ya, keluar</string>
    <string name="exit_dialog_text">Mau keluar dari akun kamu?</string>
</resources>