<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_231sdp"
                    android:layout_height="@dimen/_231sdp"
                    android:src="@drawable/no_internet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/no_connection"
                    android:fontFamily="@font/medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/abu"
                    android:layout_marginStart="@dimen/_27sdp"
                    android:layout_marginEnd="@dimen/_27sdp"
                    android:textSize="@dimen/_9ssp"
                    android:fontFamily="@font/regular"
                    android:text="@string/desc_nc" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_bar"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:indeterminateTint="@color/white"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                android:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_try"
                app:layout_constraintLeft_toLeftOf="@id/btn_try"
                app:layout_constraintRight_toRightOf="@id/btn_try"
                app:layout_constraintTop_toTopOf="@id/btn_try" />

            <Button
                android:id="@+id/btn_try"
                android:layout_width="@dimen/_246sdp"
                android:layout_height="@dimen/_46sdp"
                style="@style/Tombol"
                android:text="@string/try_again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="@dimen/_8sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>