<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:fitsSystemWindows="true"
    tools:context=".activity.AddCeritaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_toolbar_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/back_light" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_putih"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_marginTop="@dimen/_15sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/add_cover_cerita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_cover"
                        android:layout_marginStart="@dimen/_36sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/add_cover_cerita"
                        android:text="@string/add_cover_cerita"
                        android:layout_marginStart="@dimen/_11sdp"
                        android:layout_marginTop="@dimen/_19sdp"
                        android:textColor="@color/hitam"
                        android:fontFamily="@font/medium"
                        android:textSize="@dimen/_11ssp" />
                    
                    <EditText
                        android:id="@+id/add_judul_cerita"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        style="@style/TeksForm"
                        android:hint="@string/add_judul_cerita"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_cover_cerita" />

                    <EditText
                        android:id="@+id/add_asal_cerita"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        style="@style/TeksForm"
                        android:hint="@string/add_asal_cerita"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_judul_cerita" />

                    <EditText
                        android:id="@+id/add_desk_cerita"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_115sdp"
                        style="@style/TeksForm"
                        android:hint="@string/add_desk_cerita"
                        android:inputType="text|textMultiLine|textCapSentences"
                        android:gravity="top|start"
                        android:maxLines="5"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_asal_cerita" />

                    <LinearLayout
                        android:id="@+id/add_file_cerita"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        android:background="@drawable/bg_form"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_desk_cerita">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/document"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_19sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_file_cerita"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/_14ssp"
                            android:layout_gravity="center"
                            android:textColor="@color/text_form"
                            android:layout_marginStart="@dimen/_11sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/add_sound_cerita"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        android:background="@drawable/bg_form"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/add_file_cerita">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sound"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_19sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_sound_cerita"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/_14ssp"
                            android:layout_gravity="center"
                            android:textColor="@color/text_form"
                            android:layout_marginStart="@dimen/_11sdp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_tambah"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_46sdp"
                        style="@style/Tombol"
                        android:text="@string/add"
                        app:layout_constraintVertical_bias="1"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_77sdp"
                        app:layout_constraintTop_toBottomOf="@id/add_sound_cerita"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>